kubernetes/vault/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  labels:
    app: vault
spec:
  serviceName: vault
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        # The Main Vault Server
        - name: vault
          image: hashicorp/vault:latest
          command: ["vault", "server", "-config=/vault/config/vault.hcl"]
          ports:
            - containerPort: 8200
              name: http
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /v1/sys/health
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /vault/data
            - name: config
              mountPath: /vault/config

        # The Auto-Unsealer Sidecar
        - name: vault-unsealer
          image: hashicorp/vault:latest
          command: ["sh", "-c"]
          args:
            - |
              while true; do
                if vault status 2>&1 | grep -q 'Sealed.*true'; then
                  echo 'Vault is sealed. Unsealing...';
                  vault operator unseal $KEY_1;
                  vault operator unseal $KEY_2;
                  vault operator unseal $KEY_3;
                fi;
                sleep 30;
              done
      volumes:
        - name: config
          configMap:
            name: vault-config

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn-retain
        resources:
          requests:
            storage: 1Gi
